--- a/llvm/lib/AOS/CMakeLists.txt
+++ b/llvm/lib/AOS/CMakeLists.txt
@@ -2,15 +2,17 @@ add_llvm_library(AOS
   AOSGlobalVariableOptPass.cpp
   AOSOptPass.cpp
   AOSMallocPass.cpp
-  AOSInputDetectPass.cpp
+  AOSBBCounterPass.cpp
+  AOSPointerAliasPass.cpp
   AOSMarkTaintPass.cpp
-  AOSTaintOptPass.cpp
+  AOSReachTestPass.cpp
   AOS.cpp
 
   ADDITIONAL_HEADER_DIRS
   ${LLVM_MAIN_INCLUDE_DIR}/llvm/AOS
   ${LLVM_MAIN_INCLUDE_DIR}/llvm/Support
   ${LLVM_MAIN_INCLUDE_DIR}/llvm/IR
+  ${LLVM_MAIN_INCLUDE_DIR}/llvm/Analysis
 
   DEPENDS
   intrinsics_gen
@@ -18,10 +20,14 @@ add_llvm_library(AOS
   LLVMSupport
   LLVMTransformUtils
   LLVMCodeGen
+  LLVMAnalysis
+  PARTSsha3
 
   LINK_LIBS
   LLVMCore
   LLVMSupport
   LLVMTransformUtils
   LLVMCodeGen
+  LLVMAnalysis
+  PARTSsha3
   )
